**************************************************************
** MovieJukebox Release note
***************************************************************

MovieJukebox 1.0.13 beta
------------------------
  - Enhancement   #59 Use TheTVDB.com to look up TV series information
  - Enhancement   #76 Addition of a TV logo to TV Series
  - Enhancement   #86 Search NFO directory for nfo files as well
  - Enhancement  #101 Allow NFO file to override information from scanner
  - Fixed defect #119 Automatic clean up deleted movies (Use command line argument "-c")
  - Enhancement  #151 Season indicator on SD and Default skins for TV Series
  - Enhancement  #160 Vertical scroll
  - Fixed defect #190 TV Series / Season sorting incorectly
  - Enhancement  #194 Configurable number of days for "New" Category. 0 (Zero) will disable new category.
  - Fixed defect #200 Semi-colon in dir/file name breaks image/page link
  - Fixed defect #202 scanner.skip.keywords problems
  - Fixed Defect #216 HTML generation fails if the xml is not created as part of this run (i.e. the html is deleted from the source directory)
  - Fixed defect #217 NFO Scanner now checks the movie folder for NFO files (For VIDEO_TS)
  - Fixed defext #217 NFO scanner now looks for directory.nfo first then specific video.nfo second
  - Fixed defect #223 When the first fanart file is corrupt or has an error
  - Enhancement  #224 Trailer names...
  - Fixed Defect #228 Thumbnail and poster generation fails if the artwork is not downloaded as part of this run
  - Enhancement  #229 Download fanart for TV Series
  - Fixed Defect #230 Ignore trailers in next & last entry
  - Fixed defect #235 Filmweb plugin - better url identifying in NFO files
  - Fixed Defect #237 Support for the playlist "PLAY ALL" function in myiHome
  - Fixed Defect #243 Trailer tag not removing ending ']'
  - Fixed Defect #251 Movies with IT in the title are incorectly labeled as Italian