@@ -2,6 +2,10 @@
 ** MovieJukebox Release note
 ***************************************************************
 
+MovieJukebox 1.0.14 beta
+------------------------
+  - Fixed defect #299 Jukebox Cleanup causes null pointer failues
+
 MovieJukebox 1.0.13 beta
 ------------------------
   - Enhancement   #59 Use TheTVDB.com to look up TV series information
